started rss bound section

--- a/paper/config.tex
+++ b/paper/config.tex
@@ -16,7 +16,7 @@
 \newcommand{\thesisName}{Clemens Damke}
 \newcommand{\thesisMatNr}{7011488}
 \newcommand{\thesisSubject}{Seminar paper}
-\newcommand{\thesisDate}{\today}
+\newcommand{\thesisDate}{}
 \newcommand{\thesisVersion}{Draft}
 
 \newcommand{\thesisSupervisor}{Vitalik Melnikov}
@@ -90,11 +90,9 @@
 
 \usepackage{listings}
 \lstset{basicstyle=\ttfamily,breaklines=true}
+\usepackage{enumitem}
 
-\usepackage{tasks}
-\settasks{counter-format=tsk[1].}
-
-\usepackage[bguq]{frege}
+\usepackage{amsmath,amssymb}
 \usepackage{stmaryrd}
 \usepackage{multicol}
 \usepackage{pbox}
