--- a/paper/content/chapter-introduction.tex
+++ b/paper/content/chapter-introduction.tex
@@ -19,7 +19,7 @@ Afterwards the result for the coarsened graph can be iteratively refined to obta
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.8\linewidth]{gfx/intro/overview.pdf}
-	\caption{
+	\caption{%
 		Using graph coarsening to speed up graph algorithms, e.g.\  Min-Cut.
 	}\label{fig:intro:overview}
 \end{figure}
