--- a/paper/bib-refs.bib
+++ b/paper/bib-refs.bib
@@ -17,6 +17,19 @@
   url       = {http://proceedings.mlr.press/v80/loukas18a.html},
 }
 
+@Article{Shuman2013,
+  author    = {D. I. Shuman and S. K. Narang and P. Frossard and A. Ortega and P. Vandergheynst},
+  title     = {The emerging field of signal processing on graphs: Extending high-dimensional data analysis to networks and other irregular domains},
+  journal   = {{IEEE} Signal Processing Magazine},
+  year      = {2013},
+  volume    = {30},
+  number    = {3},
+  pages     = {83--98},
+  month     = {may},
+  doi       = {10.1109/msp.2012.2235192},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 % Encoding: UTF-8
