--- a/paper/content/chapter-spectral-graph-theory.tex
+++ b/paper/content/chapter-spectral-graph-theory.tex
@@ -115,6 +115,7 @@ Analogous to the classical Fourier transform, the eigenvalues of a graph are the
 	\caption{%
 		Comparison between the basis functions/vectors of the classical Fourier transform and the graph Fourier transform.
 		For the eigenfunctions on the upper half only the real cosine components of the complex exponentials are shown.
+		\source[based on]{Shuman2013}
 	}\label{fig:sgt:graphFourier}
 \end{figure}
 
